Fix overflow on testimonial section

--- a/style.css
+++ b/style.css
@@ -402,6 +402,7 @@ body {
 #testimonials-section {
   background: var(--dark-background);
   padding: 2rem 0;
+  overflow: hidden;
 }
 
 #testimonials-section h2 {
@@ -434,10 +435,10 @@ body {
   border-radius: 1rem;
   padding: 1.5rem;
   width: 300px;
-  height: auto;
+  height: 100%;
   border-radius: 6px;
   position: absolute;
-  left: max(calc(280px * 8), 100%);
+  left: max(calc(300px * 8), 100%);
   animation-name: scrollleft;
   animation-duration: 30s;
   animation-timing-function: linear;
@@ -445,11 +446,7 @@ body {
   margin: 0 1rem;
   display: flex;
   flex-direction: column;
-<<<<<<< HEAD
-  /* gap: 2rem; */
-=======
-  gap: 2rem;
->>>>>>> 3125b5fa41f063bf3c5b8584596a90608c21d40f
+  gap: 7rem;
 }
 
 .testimonial-card .customer-info {
